<resources>
    <string name="app_name">Employees</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_employer">Add</string>
    <string name="name_employer">Name</string>
    <string name="profession">Profession:</string>
    <string name="age">Age</string>
    <string name="hint_profession">Profession</string>
    <string name="update_button">Update</string>
    <string name="search_home_menu">Search</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add_new_employee">Add new employee</string>
    <string name="title_employees">Employees</string>
    <string name="title_update_employee">Update employee</string>

    <string-array name="sort_entries">
    <item>Sort by name</item>
    <item>Sort by age</item>
    <item>Sort by profession</item>
</string-array>

    <string-array name="sort_values">
        <item>sort_name</item>
        <item>sort_age</item>
        <item>sort_prof</item>
    </string-array>
</resources>